# Automated-Azan

./: .dockerignore  .gitignore  ARCHITECTURE_MINDMAP.md  AutomatedAzan.spec  CLAUDE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  DOCKER_GUIDE.md  DOCKER_OPTIMIZATION.md  DOCKER_SUCCESS.md  DST_INVESTIGATION_REPORT.md  DST_SUMMARY.txt  Dockerfile  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.web  Lambda.py  MIGRATION_GUIDE.md  Makefile  Makefile.backup  NUITKA_BUILD_GUIDE.md  PIPENV_GUIDE.md  PLATFORM_COMPATIBILITY.md  PORTAINER_CHECKLIST.md  PORTAINER_DEPLOYMENT.md  PORTAINER_DEPLOYMENT_GUIDE.md  Pipfile  QUICKSTART.md  README.md  TESTING.md  TIMEZONE_CODE_ANALYSIS.txt  UV_GUIDE.md  WEB_INTERFACE.md  adahn.config  adahn.config.example  app_config.py  athan_scheduler.py  azan.service  azan.toml  build-and-push-simple.sh  (+65 more)
.github/: dependabot.yml
Android/: README.md
chromecast/: __init__.py  circuit_breaker.py  connection.py  discovery.py  manager.py  playback.py
data/: icci_timetable.json  naas_dst_metadata.json  naas_prayers_timetable.json
go/: .gitignore  Dockerfile.headless  Makefile  README.md  build.sh  go.mod  go.sum
templates/: base.html  chromecasts.html  dashboard.html  logs.html  scheduler.html  settings.html  test.html  test_new.html  test_old.html
tests/: conftest.py  test_athan_scheduler.py  test_basic_functionality.py  test_chromecast_improved.py  test_chromecast_manager.py  test_config_manager.py  test_integration.py  test_logging_setup.py  test_main.py  test_prayer_times_fetcher.py  test_settings.py  test_time_sync.py  (+1 more)
(+70 files in other folders)
