[project]
name = "automated-azan"
version = "1.0.0"
description = "Automated Azan player with Chromecast support"
requires-python = ">=3.11"
dependencies = [
    "pychromecast==14.0.5",
    "schedule>=1.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.27.1",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=0.19.0",
    "flask",
    "flask-socketio",
]

[project.optional-dependencies]
gui = [
    "pystray>=0.19.5",
    "pillow>=11.3.0",
]
build = [
    "pyinstaller>=6.15.0",
    "nuitka>=2.7.0",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []